tests/bounds-are-one-way.wpl
T : A => trait A

f :: A where (T A) => Number
f : T
